# Lidar

./: CMakeLists.txt  README.md  package.xml
cfg/: Control.cfg  Region.cfg  RoadObstacle.cfg
config/: params.yaml
launch/: core.launch  obstacle.launch  region.launch  regions.launch
msg/: Region.msg
src/: obstacle_loc.cpp  region.cpp
