<package format="2">
  <name>ltu_actor_route_obstacle</name>
  <version>0.0.1</version>
  <description>
    This package provides proccessing for the VLP-16.
  </description>
  <maintainer email="cfaulkner@ltu.edu">Charles Faulkner</maintainer>
  <license>UNLICENSED</license>
  <url>https://github.com/LTU-Actor/Sensor-Lidar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
